--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ h3{
   margin-bottom: 20px;
 }
 
+.event-info-line > *{
+  width: 200px;
+}
+
 .event-info-line>h2, .event-info-line>h3{
   justify-content: space-between;
   margin: 0px 20px 0px 20px;
