--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,10 @@ h3{
 
 .event-container{
   width: 600px;
-  height: 100px;
+  height: 150px;
   color: white;
   align-content: center;
+  min-height: 150px;
 }
 
 
@@ -208,5 +209,34 @@ h3{
 }
 
 .input-row{
-  
+ justify-content: space-between; 
+ margin-left: 15px;
+ margin-right: 15px;
+}
+
+.input-row>input{
+  width: 150px;
+}
+
+.input-row h3{
+  display: inline-block;
+  width: 100px;
+  font-size: 1.1em;
+}
+
+.input-row button{
+  width: 35;
+  border: 1px solid white;
+  margin: 10px;
+}
+
+.input-row button:hover{
+  width: 35;
+  border: 1px solid white;
+  background-color: darkcyan;
+  margin: 10px;
+}
+
+.FormNewEvent{
+  padding-top: 10px;
 }
