--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,16 @@ h3{
   width: 100vw;
 }
 
+.nav-beginning{
+  align-content: flex-start;
+}
+
+.nav-end{
+  position: absolute;
+  right: 15px;
+  top: 8px;
+}
+
 .nav-link a {
   float: left;
   padding: 14px 16px;
@@ -74,6 +84,17 @@ h3{
   background-color: #4caf50;
   font-weight: bold;
   
+}
+
+.btn-nav{
+  border: lightgreen 1px solid;
+  /* color: green; */
+  color: white;
+  padding: 3px;
+}
+
+.btn-nav:hover{
+  background-color: black;
 }
 
 
@@ -239,4 +260,9 @@ h3{
 
 .FormNewEvent{
   padding-top: 10px;
+}
+
+.display-row{
+  justify-content: left;
+  margin-left: 30px;
 }
